<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.StartUp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rectangle_3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/prototype_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/g_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/prototype_map"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_20sdp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Doctor"
        android:layout_width="@dimen/_83sdp"
        android:layout_height="@dimen/_42sdp"
        app:layout_constraintTop_toBottomOf="@id/prototype_map"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:background="@drawable/textview_background"
        android:text="@string/doctor"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_14sdp"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Recep"
        android:layout_width="@dimen/_105sdp"
        android:layout_height="@dimen/_42sdp"
        app:layout_constraintTop_toTopOf="@id/Doctor"
        app:layout_constraintStart_toEndOf="@id/Doctor"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/textview_background"
        android:gravity="center"
        android:text="@string/receptionist"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_14sdp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Nurse"
        android:layout_width="@dimen/_78sdp"
        android:layout_height="@dimen/_42sdp"
        app:layout_constraintTop_toTopOf="@id/Doctor"
        app:layout_constraintStart_toEndOf="@id/Recep"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/textview_background"
        android:text="@string/nurse"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_14sdp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/AnaEmp"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_42sdp"
        app:layout_constraintTop_toBottomOf="@id/Doctor"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/textview_background"
        android:text="@string/analysis_employee"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_14sdp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Manager"
        android:layout_width="@dimen/_77sdp"
        android:layout_height="@dimen/_42sdp"
        app:layout_constraintTop_toTopOf="@id/AnaEmp"
        app:layout_constraintStart_toEndOf="@id/AnaEmp"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/textview_background"
        android:text="@string/manager"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_14sdp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/HR"
        android:layout_width="@dimen/_38sdp"
        android:layout_height="@dimen/_42sdp"
        app:layout_constraintTop_toTopOf="@id/AnaEmp"
        app:layout_constraintStart_toEndOf="@id/Manager"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/textview_background"
        android:text="@string/hr"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_14sdp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rectangle_2"/>


</androidx.constraintlayout.widget.ConstraintLayout>