<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:background="@drawable/rectangle_3"/>


   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/g_line"
       android:layout_width="match_parent"
       android:layout_height="@dimen/_1sdp"
       android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.4"/>

   <de.hdodenhof.circleimageview.CircleImageView
       android:id="@+id/app_logo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/app_main_img"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="@dimen/_50sdp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"/>

   <com.google.android.material.textview.MaterialTextView
       android:id="@+id/welcome_bake"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/app_logo"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:text="@string/welcome_back"
       android:layout_marginTop="@dimen/_8sdp"
       android:textColor="@color/main_color"
       android:textSize="@dimen/_18sdp"/>

   <com.google.android.material.textview.MaterialTextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/welcome_bake"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:text="@string/to_continue_login_now"
       android:layout_marginTop="@dimen/_8sdp"
       android:textSize="@dimen/_12sdp"/>



   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/email"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/g_line"
       android:layout_marginTop="@dimen/_30sdp"
       style="@style/TextInputLayout"
       android:hint="@string/e_mail"
       android:layout_marginHorizontal="@dimen/_12sdp"
       app:startIconDrawable="@drawable/email"
       app:startIconTint="@color/main_color">


      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
          android:inputType="textEmailAddress"
          android:textColor="@color/black"/>

   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/password"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/email"
       android:layout_marginTop="@dimen/_30sdp"
       android:hint="@string/password"
       style="@style/TextInputLayout"
       app:prefixText="|"
       app:prefixTextColor="@color/main_color"
       android:layout_marginHorizontal="@dimen/_12sdp"
       app:hintAnimationEnabled="true"
       app:startIconDrawable="@drawable/password"
       app:startIconTint="@color/main_color"
       app:endIconDrawable="@drawable/ic_eye"
       app:endIconMode="password_toggle"
       app:endIconTint="@color/main_color"
       app:endIconCheckable="true"
       app:errorIconDrawable="@drawable/ic_error"
       app:errorEnabled="true"
       app:errorTextColor="@color/black">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:inputType="textPassword"
          android:textColor="@color/black"/>
   </com.google.android.material.textfield.TextInputLayout>



   <com.google.android.material.textview.MaterialTextView
       android:id="@+id/forget_password"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_8sdp"
       android:clickable="true"
       android:focusable="true"
       android:text="@string/forget_password"
       android:textSize="@dimen/_12sdp"
       android:textColor="@color/black"
       app:layout_constraintEnd_toEndOf="@id/password"
       app:layout_constraintTop_toBottomOf="@id/password"/>


   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/Login_btn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/forget_password"
       app:layout_constraintStart_toStartOf="@id/password"
       android:layout_marginHorizontal="@dimen/_12sdp"
       android:layout_marginTop="@dimen/_30sdp"
       android:background="@drawable/background_btn"
       android:backgroundTint="@color/main_color"
       android:text="@string/login"
       android:textAllCaps="false"
       android:textColor="@color/white"
       android:textSize="@dimen/_16sdp"/>

   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:background="@drawable/rectangle_2"/>

</androidx.constraintlayout.widget.ConstraintLayout>